I think I fixed it, DBase removed

--- a/csFinalProject/csFinalProject.csproj
+++ b/csFinalProject/csFinalProject.csproj
@@ -67,6 +67,12 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPersonalDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPersonalDetails.Designer.cs">
+      <DependentUpon>frmPersonalDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmRegistration.cs">
       <SubType>Form</SubType>
     </Compile>
