--- a/csFinalProject/csFinalProject.csproj
+++ b/csFinalProject/csFinalProject.csproj
@@ -158,6 +158,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>pchr42563.mdf</DependentUpon>
     </Content>
+    <Content Include="README.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
